@@ -10,6 +10,7 @@ import com.powsybl.commons.reporter.Report;
 import com.powsybl.commons.reporter.Reporter;
 import com.powsybl.commons.reporter.TypedValue;
 import com.powsybl.iidm.modification.tripping.BranchTripping;
+import com.powsybl.iidm.modification.tripping.HvdcLineTripping;
 import com.powsybl.iidm.modification.tripping.ThreeWindingsTransformerTripping;
 import com.powsybl.iidm.modification.tripping.Tripping;
 import com.powsybl.iidm.network.*;
@@ -22,7 +23,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.HashSet;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.gridsuite.modification.server.NetworkModificationException.Type.EQUIPMENT_NOT_FOUND;
 import static org.gridsuite.modification.server.NetworkModificationException.Type.OPERATING_STATUS_MODIFICATION_ERROR;
@@ -95,9 +95,9 @@ public class OperatingStatusModification extends AbstractModification {
 
         LOGGER.info("Apply Trip on {} {}, switchesToDisconnect: {} terminalsToDisconnect: {} traversedTerminals: {}",
                 equipmentType, equipment.getId(),
-                switchesToDisconnect.stream().map(Identifiable::getId).collect(Collectors.toList()),
-                terminalsToDisconnect.stream().map(Terminal::getConnectable).map(Identifiable::getId).collect(Collectors.toList()),
-                traversedTerminals.stream().map(Terminal::getConnectable).map(Identifiable::getId).collect(Collectors.toList()));
+                switchesToDisconnect.stream().map(Identifiable::getId).toList(),
+                terminalsToDisconnect.stream().map(Terminal::getConnectable).map(Identifiable::getId).toList(),
+                traversedTerminals.stream().map(Terminal::getConnectable).map(Identifiable::getId).toList());
 
         switchesToDisconnect.forEach(sw -> sw.setOpen(true));
         terminalsToDisconnect.forEach(Terminal::disconnect);
@@ -109,10 +109,13 @@ public class OperatingStatusModification extends AbstractModification {
                 .withSeverity(TypedValue.INFO_SEVERITY)
                 .build());
 
-        traversedTerminals.stream().map(t -> network.getIdentifiable(t.getConnectable().getId()))
+        traversedTerminals.stream()
+                .map(t -> network.getIdentifiable(t.getConnectable().getId()))
                 .filter(Objects::nonNull)
-                .filter(distinctByKey(Identifiable::getId))  // dont process the same equipment more than once
-                .forEach(b -> b.newExtension(OperatingStatusAdder.class).withStatus(OperatingStatus.Status.FORCED_OUTAGE).add());
+                .filter(distinctByKey(Identifiable::getId))
+                .forEach(b -> equipment.newExtension(OperatingStatusAdder.class)
+                        .withStatus(OperatingStatus.Status.FORCED_OUTAGE)
+                        .add());
     }
 
     private void applySwitchOnEquipment(Reporter subReporter, Identifiable<?> equipment, String equipmentType) {
@@ -176,6 +179,8 @@ public class OperatingStatusModification extends AbstractModification {
             return new BranchTripping(branch.getId());
         } else if (identifiable instanceof ThreeWindingsTransformer w3t) {
             return new ThreeWindingsTransformerTripping(w3t.getId());
+        } else if (identifiable instanceof HvdcLine hvdcLine) {
+            return new HvdcLineTripping(hvdcLine.getId());
         }
         throw NetworkModificationException.createEquipmentTypeNotSupported(identifiable.getClass().getSimpleName());
     }
